# UnionOffline

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  morose_config.h.in
.github/workflows/: NewVersionRelease.yml  codeupSync.yml
cmake/: FindMorose.cmake
components/: ftd2xx_static.7z  ssl.7z
config/: morose_config.h.in
docs/: Build.md  ExcelTemplateRender.md
excel_templates/AScan/: T_仪器性能.xlsx  T_报表生成.xlsx  T_报表生成390.xlsx  T_报表生成_CameraImageSpecial.xlsx  T_报表生成_RailWeldSpecial.xlsx
excel_templates/TOFD_PE/: T_报表生成.xlsx
patchs/: RailWeldSpecial.patch  RailWeldSpecial_PXUT-T8.patch  patchs-disable-upgrade-featrue.patch  patchs-pxut-390-railweld-spec.patch  patchs-pxut-t8-railweld-spec.patch  patchs_PXUT-T8_Rail.patch
resource/: icon.rc  morose.qrc
resource/img/instruments/PXUT-330N/: description.md
resource/img/instruments/PXUT-390N/: description.md
resource/img/instruments/PXUT-F4/: description.md
resource/qml/: About.qml  AboutWnd.qml  Communicate.qml  CommunicateWnd.qml  MainWnd.qml  SettingUI.qml  SettingWnd.qml  UpdateUI.qml  UpdateWnd.qml  main.qml
resource/qml/components/: qmldir
resource/qml/components/common/: Area.qml  Button.qml  ComboBox.qml  GateDrawMask.qml  IconButton.qml  JsonTable.qml  KeyValue.qml  Slider.qml  SpinBox.qml  Toast.qml  ToastManager.qml
resource/qml/src/AScan/: ControlUI.qml  DefectListArea.qml  HelpWnd.qml  MainUI.qml  ParamUI.qml  qmldir
resource/qml/src/OnStart/: ControlUI.qml  MainUI.qml
resource/qml/src/OnStart/components/: ImageCard.qml  qmldir
resource/qml/src/TOFD_PE/: ControlUI.qml  Help.qml  MainUI.qml  ParamUI.qml
resource/qml/src/TOFD_PE/compnents/: LinesMask.qml  ScanView.qml  qmldir
resource/qml/src/TofdPe/: ControlUI.qml  MainUI.qml
resource/qml/src/TofdPe/compnents/: LinesMask.qml  ScanView.qml
script/: pack-installer-msvc.iss.in  pack-installer.iss.in
src/: AppSetting.cpp  AppSetting.hpp  SerialRunner.cpp  SerialRunner.hpp  main.cpp
src/AScan/: AScanInteractor.cpp  AScanInteractor.hpp  CImage.cpp  CImage.hpp  RailWeldDigram.cpp  RailWeldDigram.h  RailWeldSimulation.cpp  RailWeldSimulation.hpp
src/TOFD_PE/: LinesMaskEnum.cpp  LinesMaskEnum.hpp  MaskStatusEnum.cpp  MaskStatusEnum.hpp  ScanView.cpp  ScanView.hpp  TofdPeAScanView.cpp  TofdPeAScanView.hpp  TofdPeDScanView.cpp  TofdPeDScanView.hpp  TofdPeInteractor.cpp  TofdPeInteractor.hpp
src/View/: AScanView.cpp  AScanView.hpp  AxisView.cpp  AxisView.hpp  BScanView.cpp  BScanView.hpp  BasicView.cpp  BasicView.hpp  CScanView.cpp  CScanView.hpp  DefectListModel.cpp  DefectListModel.hpp  IScanView.cpp  IScanView.hpp
src/common/: AppUpdater.cpp  AppUpdater.hpp  FileExists.cpp  FileExists.hpp  FileManagement.cpp  FileManagement.hpp  FileReader.cpp  FileReader.hpp  FileReaderSelector.cpp  GlobalCppProgress.cpp  GlobalCppProgress.hpp  QmlConditionalVariable.cpp  QmlConditionalVariable.hpp  QmlTranslator.cpp  QmlTranslator.hpp  UpgradeFromGitee.cpp  UpgradeFromGitee.hpp  UpgradeInterface.cpp  UpgradeInterface.hpp  common.cpp  common.hpp  qmltranslator.cpp
translations/: UnionOffline_en.ts
